# JustinsRayTracer

./: CMakeLists.txt
include/: camera.h  renderer.h
include/hits/: hitcollection.h  hitrecord.h  hittable.h  world.h
include/hits/materials/: dielectric.h  fuzzedmetal.h  lambertian.h  material.h  metal.h
include/hits/objects/: sphere.h
include/utility/: debug.h  dimensions.h  ray.h  utility.h  vec3.h  vecrand.h
src/: camera.cpp  dielectric.cpp  fuzzedmetal.cpp  hitcollection.cpp  hitrecord.cpp  lambertian.cpp  main.cpp  metal.cpp  ray.cpp  renderer.cpp  sphere.cpp  utility.cpp  vec3.cpp  vecrand.cpp  world.cpp
